# tradepruf

./: .gitignore  README.md  pyproject.toml
docs/sample_trade/: backtest_btc-eth-aapl.txt
examples/: custom_strategy.py  simple_backtest.py
portfolios/: btc-eth-aapl.json  btc-eth-sol.json  conservative.json  eft-portfolio.json  extreme-crypto-hft.json  extreme-crypto.json  high-frequency.json  large-cap.json  margin-trading.json  mixed-asset.json  mixed-timeframe.json  momentum.json  tech-stocks.json
src/: __init__.py
src/backtest/: engine.py
src/cli/: commands.py
src/core/: asset.py  metrics.py  position.py
src/data/: cache.py  fetcher.py
src/strategies/: base.py  futures.py  momentum.py  moving_average.py  volatility.py
src/utils/: journal.py  logger.py
src/visualization/: charts.py  enhanced_charts.py  unified_dashboard.py
